--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,12 @@
           <li>
             <a href="#/view2">Link</a>
           </li>
+          <li>
+            <a href="#/box">Box</a>
+          </li>
+          <li>
+            <a href="#/form">Form</a>
+          </li>
         </ul>  
       </div>
     </nav>
@@ -50,10 +56,6 @@
   <script src="bower_components/angular/angular.js"></script>
   <!-- Angular UI Route -->
   <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/jqzoom/js/jquery.jqzoom-core.js"></script>
-  <script src="lib/jquery.mlens.min.js"></script>
-  <script src="app.js"></script>
-  <script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
