optimized the front end architecture.

--- a/app/tpl/css3.html
+++ b/app/tpl/css3.html
@@ -1,4 +1,5 @@
-<div ng-controller="BoxCtrl">
+<div>
+	
 	<div id="redBox" style="width: 100px; height: 100px; background-color: red;" ng-click="click()">
 	</div>
 	<p>{{w}} x {{h}}</p>
