--- a/app/tpl/react.html
+++ b/app/tpl/react.html
@@ -1,4 +1,4 @@
-<div ng-controller="View2Ctrl">
+<div>
 	<p>This is the partial for view 2.</p>
 	<p ng-click="hello()">
 	  Showing of 'interpolate' filter:
