--- a/app/index.html
+++ b/app/index.html
@@ -1,37 +1,30 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" ng-app="myApp" class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]>      <html lang="en" ng-app="app" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html lang="en" ng-app="app" class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html lang="en" ng-app="app" class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en" ng-app="app" class="no-js"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My AngularJS App</title>
-  <meta name="description" content="">
+  <title>前端实验室</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="stylesheets/style.css">
-  <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-inverse navbar-static-top">
+    <nav class="navbar navbar-static-top top-bar">
       <div class="container">
-        <a class="navbar-brand" href="#">Andy's Blog</a>
+        <a class="navbar-brand" ui-sref="angular">前端实验室</a>
         <ul class="nav navbar-nav">
-          <li class="active">
-            <a href="#/view1">Home</a>
+          <li ui-sref-active="active">
+            <a ui-sref="angular">AngularJS</a>
           </li>
-          <li>
-            <a href="#/view2">Link</a>
+          <li ui-sref-active="active">
+            <a ui-sref="react">React</a>
           </li>
-          <li>
-            <a href="#/box">Box</a>
-          </li>
-          <li>
-            <a href="#/form">Form</a>
+          <li ui-sref-active="active">
+            <a ui-sref="css3">CSS3</a>
           </li>
         </ul>  
       </div>
@@ -41,13 +34,8 @@
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-  <div class="container" ng-view>
-      
+  <div class="main" ui-view>
   </div>
-
-  <footer>
-    
-  </footer>
   
   
   <!-- jQuery -->
@@ -55,7 +43,11 @@
   <!-- AngularJS -->
   <script src="bower_components/angular/angular.js"></script>
   <!-- Angular UI Route -->
-  <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script src="js/modules.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/controllers/AngularController.js"></script>
+  <script src="js/controllers/ReactController.js"></script>
+  <script src="js/controllers/Css3Controller.js"></script>
 </body>
 </html>
