update for navigation of angular page.

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,13 @@
             <a ui-sref="react">React</a>
           </li>
           <li ui-sref-active="active">
+            <a ui-sref="html5">HTML5</a>
+          </li>
+          <li ui-sref-active="active">
             <a ui-sref="css3">CSS3</a>
+          </li>
+          <li ui-sref-active="active">
+            <a ui-sref="es6">ECMAScript6</a>
           </li>
         </ul>  
       </div>
