add the slideout navigation component.

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
   <header>
     <nav class="navbar navbar-static-top top-bar">
       <div class="container">
-        <a class="navbar-brand" ui-sref="angular">前端实验室</a>
+        <a class="navbar-brand" ui-sref="angular">FrontEndLab</a>
         <ul class="nav navbar-nav">
           <li ui-sref-active="active">
             <a ui-sref="angular">AngularJS</a>
